--- a/components/Footer/index.module.scss
+++ b/components/Footer/index.module.scss
@@ -1,46 +1,13 @@
 .footerContent {
-  width: 1200px;
+  width: 100%;
   margin: 0 auto;
-  padding: 30px 0;
+  padding: .3rem;
   color: #999;
 
-  .footerNav {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-
-    .navLink {
-      padding: 0 10px;
-      font-size: 12px;
-      color: #999;
-      text-decoration: none;
-      height: 14px;
-      line-height: 14px;
-
-      &:hover {
-        color: #f60;
-      }
-    }
-
-    .linkDivider {
-      width: 1px;
-      height: 14px;
-      background-color: #999;
-      display: block;
-    }
-  }
-
-  .navDivider {
-    height: 1px;
-    background-color: #ccc;
-    display: block;
-    margin-top: 14px;
-  }
-
   .footerText {
-    height: 30px;
-    line-height: 30px;
-    font-size: 12px;
+    line-height: .4rem;
+    font-size: .24rem;
     text-align: center;
+    margin-bottom: .2rem;
   }
 }
