--- a/components/Navbar/index.module.scss
+++ b/components/Navbar/index.module.scss
@@ -6,51 +6,25 @@
   background-color: #FFF;
 
   .navContent {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    padding: 18px;
+    height: .88rem;
+    line-height: .88rem;
+    text-align: center;
+    position: relative;
 
-    .logoContent {
-      font-size: 20px;
-      font-weight: bold;
-      height: 44px;
-      line-height: 44px;
+    .backIcon {
+      float: left;
+      font-size: .40rem;
+      position: absolute;
+      top: .22rem;
+      left: .2rem;
     }
 
-    .searchContent {
-      margin-left: 20px;
-      flex: 1;
-      display: flex;
-
-      .searchInput {
-        flex: 1;
-        height: 44px;
-        line-height: 42px;
-        padding-left: 10px;
-        border: 2px solid #00d0d4;
-        border-radius: 5px 0 0 5px;
-        font-size: 16px;
-        color: #9e9e9e;
-
-        &:focus-visible {
-          border: 2px solid #00d0d4;
-          outline: none
-        }
-      }
-
-      .searchButton {
-        height: 44px;
-        line-height: 44px;
-        text-align: center;
-        background: linear-gradient(116deg, #00d0d4 5%, #00c5c3 51%, #9effa4 100%);
-        border: none;
-        color: #FFF;
-        width: 68px;
-        border-radius: 0 5px 5px 0;
-        cursor: pointer;
-        font-size: 16px;
-      }
+    .logoContent {
+      font-size: .40rem;
+      font-weight: bold;
+      height: .88rem;
+      line-height: .88rem;
+      color: #222;
     }
 
     .publishContent {
@@ -73,31 +47,44 @@
   }
 
   .navMenuContent {
+    margin-left: .88rem;
+    flex: 1;
+    display: flex;
+    padding: .14rem;
+
+    .searchInput {
+      flex: 1;
+      height: .6rem;
+      line-height: .6rem;
+      padding-left: .2rem;
+      border: .04rem solid #00d0d4;
+      border-radius: .1rem 0 0 .1rem;
+      font-size: .26rem;
+      color: #9e9e9e;
+
+      &:focus-visible {
+        border: 2px solid #00d0d4;
+        outline: none
+      }
+    }
+
+    .searchButton {
+      height: .6rem;
+      line-height: .6rem;
+      text-align: center;
+      background: linear-gradient(116deg, #00d0d4 5%, #00c5c3 51%, #9effa4 100%);
+      border: none;
+      color: #FFF;
+      width: 1.2rem;
+      border-radius: 0 .1rem .1rem 0;
+      cursor: pointer;
+      font-size: .3rem;
+    }
+  }
+
+  .navMenuContent {
     margin: 0 auto;
     height: 44px;
     background: linear-gradient(116deg, #00d0d4 5%, #00c5c3 51%, #9effa4 100%);
-
-    .navMenu {
-      width: 1200px;
-      margin: 0 auto;
-      display: flex;
-
-      .navButton {
-        line-height: 44px;
-        padding: 0 12px;
-        color: #FFF;
-        cursor: pointer;
-        transition: background-color .3s linear;
-        text-decoration: none;
-
-        &.active {
-          background-color: #0088a4;
-        }
-
-        &:hover {
-          background-color: #0088a4;
-        }
-      }
-    }
   }
 }
