--- a/components/Navbar/index.module.scss
+++ b/components/Navbar/index.module.scss
@@ -26,24 +26,6 @@
       line-height: .88rem;
       color: #222;
     }
-
-    .publishContent {
-      margin-left: 20px;
-
-      .publishButton {
-        display: block;
-        color: #FFF;
-        width: 140px;
-        background: linear-gradient(116deg, #00d0d4 5%, #00c5c3 51%, #9effa4 100%);
-        height: 44px;
-        text-align: center;
-        line-height: 44px;
-        border: none;
-        border-radius: 5px;
-        font-size: 16px;
-        cursor: pointer;
-      }
-    }
   }
 
   .navMenuContent {
@@ -63,7 +45,7 @@
       color: #9e9e9e;
 
       &:focus-visible {
-        border: 2px solid #00d0d4;
+        border: .04rem solid #00d0d4;
         outline: none
       }
     }
@@ -84,7 +66,7 @@
 
   .navMenuContent {
     margin: 0 auto;
-    height: 44px;
+    height: .88rem;
     background: linear-gradient(116deg, #00d0d4 5%, #00c5c3 51%, #9effa4 100%);
   }
 }
