--- a/pages/joinUs/index.module.scss
+++ b/pages/joinUs/index.module.scss
@@ -1,35 +1,40 @@
 .pageContent {
-  width: 1200px;
-  margin: 0 auto;
+  padding: .3rem;
 
   .joinContent {
-    margin-top: 20px;
+    margin-top: .4rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 
     .storeSettleButton {
       cursor: pointer;
-      width: 300px;
-      height: 300px;
+      width: 3rem;
+      height: 3rem;
       background: linear-gradient(116deg, #00d0d4 5%, #00c5c3 51%, #9effa4 100%);
-      border-radius: 10px;
+      border-radius: .2rem;
       text-align: center;
       color: #FFF;
-      font-size: 40px;
-      box-shadow: 1px 1px 10px 2px #CCC;
-      margin: 0 20px;
+      font-size: .3rem;
+      box-shadow: .02rem .02rem .2rem .04rem #CCC;
       transition: box-shadow .3s linear;
 
+      .storeImage {
+        width: 2rem;
+        height: 2rem;
+        margin-top: .3rem;
+      }
+
       &:hover {
-        box-shadow: 2px 2px 20px 4px #CCC;
+        box-shadow: .04rem .04rem .4rem .08rem #CCC;
       }
     }
   }
 
   .joinTips {
-    font-size: 14px;
+    font-size: .28rem;
+    line-height: .4rem;
     color: #666;
     text-align: center;
-    margin-top: 40px;
+    margin-top: .8rem;
   }
 }
