--- a/pages/peoplePublish/index.module.scss
+++ b/pages/peoplePublish/index.module.scss
@@ -1,13 +1,11 @@
 .pageContent {
-  width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  margin-top: 20px;
+  margin-top: .2rem;
   background-color: #FFF;
 
   .title {
-    height: 40px;
-    font-size: 18px;
+    padding: .3rem;
+    height: 1rem;
+    font-size: .36rem;
     font-weight: 700;
   }
 
@@ -15,30 +13,44 @@
     height: 1px;
     width: 100%;
     background-color: #eee;
-    margin-bottom: 20px;
-  }
-
-  .secTitle {
-    font-size: 16px;
-    line-height: 20px;
-    margin-bottom: 20px;
-    font-weight: bold;
+    margin-bottom: .2rem;
   }
 
   .inputItem {
-    margin-bottom: 16px;
+    margin-bottom: .16rem;
+
+    :global {
+      .ant-form-item-label {
+        line-height: .4rem !important;
+        height: .5rem !important;
+        padding-bottom: .1rem !important;
+
+        label {
+          line-height: .4rem !important;
+          height: .4rem !important;
+        }
+      }
+    }
   }
 
-  .publishButton {
-    width: 100%;
-    height: 44px;
-    background: linear-gradient(116deg, #00d0d4 5%, #00c5c3 51%, #9effa4 100%);
-    color: #FFF;
-    border: none;
+  .storeForm {
+    padding: 0 .3rem;
+  }
 
-    &:hover {
-      color: #FFF !important;
-      box-shadow: 1px 1px 10px 2px #CCC;
+  .buttonContent {
+    padding: 0 .3rem .4rem;
+
+    .publishButton {
+      width: 100%;
+      height: .8rem;
+      background: linear-gradient(116deg, #00d0d4 5%, #00c5c3 51%, #9effa4 100%);
+      color: #FFF;
+      border: none;
+
+      &:hover {
+        color: #FFF !important;
+        box-shadow: 1px 1px 10px 2px #CCC;
+      }
     }
   }
 }
